--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.4+4
   font_awesome_flutter: ^10.7.0
   image_cropper: ^6.0.0
+  fl_chart: ^0.67.0
 
 
 dev_dependencies:
